# obes_strmlt

./: Pipfile  app.py  names.csv  pyproject.toml  requirements.txt
pipenvstrml/: .gitignore  pyvenv.cfg
