[tool.poetry]
name = "obes_strmlt"
version = "0.1.0"
description = ""
authors = ["alauddin-sabari <aladinsabari@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.7.0"
pandas = "^1.4.1"
SQLAlchemy = "^1.4.32"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
